--- a/TD/Base.lproj/Main.storyboard
+++ b/TD/Base.lproj/Main.storyboard
@@ -18,6 +18,7 @@
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="MCh-5y-RO2">
                         <rect key="frame" x="0.0" y="20" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <color key="barTintColor" red="0.19511329884664147" green="0.70202495418261224" blue="0.82907626295336789" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </navigationBar>
                     <connections>
                         <segue destination="juQ-CF-dCW" kind="relationship" relationship="rootViewController" id="xaw-cj-Uat"/>
@@ -27,7 +28,7 @@
             </objects>
             <point key="canvasLocation" x="45.625" y="-417.98666666666662"/>
         </scene>
-        <!--Components-->
+        <!--Componentes de la Transformacion Digital-->
         <scene sceneID="hu3-3b-IdF">
             <objects>
                 <viewController storyboardIdentifier="Components" id="juQ-CF-dCW" customClass="Components" sceneMemberID="viewController">
@@ -38,16 +39,16 @@
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="vWr-5L-b6c">
                                 <rect key="frame" x="0.0" y="64" width="414" height="623"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="backgroundColor" red="0.1951132988" green="0.7020249542" blue="0.82907626300000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <connections>
                                     <outlet property="dataSource" destination="juQ-CF-dCW" id="qee-5H-xt4"/>
                                     <outlet property="delegate" destination="juQ-CF-dCW" id="RuC-rY-gRX"/>
                                 </connections>
                             </tableView>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="0.1951132988" green="0.7020249542" blue="0.82907626300000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </view>
-                    <navigationItem key="navigationItem" id="I0H-p5-7kC"/>
+                    <navigationItem key="navigationItem" title="Componentes de la Transformacion Digital" id="I0H-p5-7kC"/>
                     <size key="freeformSize" width="414" height="736"/>
                     <connections>
                         <outlet property="tblMain" destination="vWr-5L-b6c" id="AhS-6V-cyF"/>
@@ -81,17 +82,6 @@
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="9eI-b1-ewC">
-                                        <rect key="frame" x="0.0" y="0.0" width="46" height="35"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="50"/>
-                                        <state key="normal" title="&lt;">
-                                            <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                        </state>
-                                        <connections>
-                                            <action selector="backButtonPress:" destination="pOd-BO-bWs" eventType="touchUpInside" id="frV-xI-sjJ"/>
-                                        </connections>
-                                    </button>
                                     <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" textAlignment="natural" id="xeP-VL-YMv">
                                         <rect key="frame" x="8" y="361" width="398" height="262"/>
                                         <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
@@ -100,6 +90,16 @@
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                     </textView>
+                                    <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="9eI-b1-ewC">
+                                        <rect key="frame" x="8" y="8" width="38" height="33"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <state key="normal" image="ic_keyboard_arrow_left_white.png">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="backButtonPress:" destination="pOd-BO-bWs" eventType="touchUpInside" id="frV-xI-sjJ"/>
+                                        </connections>
+                                    </button>
                                 </subviews>
                             </scrollView>
                         </subviews>
@@ -236,5 +236,6 @@
     </scenes>
     <resources>
         <image name="Artificial-Intelligence.jpg" width="2000" height="1000"/>
+        <image name="ic_keyboard_arrow_left_white.png" width="72" height="72"/>
     </resources>
 </document>
