--- a/TD/Base.lproj/Main.storyboard
+++ b/TD/Base.lproj/Main.storyboard
@@ -10,11 +10,11 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Item-->
+        <!--Componentes-->
         <scene sceneID="Nof-5U-O6r">
             <objects>
                 <navigationController id="oBl-RJ-92l" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item" id="6fD-J0-Bcf"/>
+                    <tabBarItem key="tabBarItem" title="Componentes" image="ic_dashboard.png" id="6fD-J0-Bcf"/>
                     <size key="freeformSize" width="414" height="736"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="MCh-5y-RO2">
                         <rect key="frame" x="0.0" y="20" width="414" height="44"/>
@@ -489,6 +489,7 @@ DIGITAL</string>
     <resources>
         <image name="Artificial-Intelligence.jpg" width="2000" height="1000"/>
         <image name="fondoazul.png" width="1366" height="768"/>
+        <image name="ic_dashboard.png" width="24" height="24"/>
         <image name="ic_keyboard_arrow_left_white.png" width="72" height="72"/>
         <image name="img-background1" width="785" height="1388"/>
         <image name="img-background2" width="785" height="1385"/>
